Remove via from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,8 @@ compile_commands.json
 .clangd/
 .cache/
 
+# Commented out to make my life easier
 # VIA(L) files that don't belong in QMK repo
-via*.json
-/keyboards/**/keymaps/via/*
-/keyboards/**/keymaps/vial/*
+# via*.json
+# /keyboards/**/keymaps/via/*
+# /keyboards/**/keymaps/vial/*
